# dep-watch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
depwatch/common/: config.py  features.py  types.py
depwatch/core/: feature_extractor.py  github_client.py  github_graphql.py  labeler.py  sentiment.py
depwatch/inference_service/: main.py
depwatch/inference_service/models/: schemas.py
depwatch/inference_service/routers/: scan.py
depwatch/inference_service/services/: cache.py  manifest_parser.py  scanner.py  scorer.py
depwatch/ingestion_function/registry_clients/: npm.py  pypi.py
depwatch/model_training/: bq_direct_features.py  bq_pipeline.py  bq_queries.py  compute_features.py  dataset.py  evaluate.py  temporal_models.py  train_baselines.py  train_temporal.py  tune_xgboost.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
tests/: conftest.py
tests/fixtures/github_api_responses/: commits_pallets_flask.json  contributors_pallets_flask.json  issues_pallets_flask.json  pulls_pallets_flask.json  releases_pallets_flask.json  repo_pallets_flask.json
tests/fixtures/registry_responses/: npm_express.json  pypi_flask.json
tests/fixtures/sample_manifests/: go.mod  package.json  requirements.txt
tests/unit/: test_cache.py  test_config.py  test_dataset.py  test_feature_extractor.py  test_features.py  test_github_client.py  test_graphql_client.py  test_labeler.py  test_manifest_parser.py  test_placeholder.py  test_registry_clients.py  test_scan_api.py  test_scorer.py  test_sentiment.py
